backend work cont
increasing work in the app for the backend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_AUTH0_DOMAIN=dev-frgzkrnejwstqejh.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=gVAl0PMYAiqdr8rl3uoEnGlqhmRZbLaZ
+REACT_APP_AUTH0_AUDIENCE=https://react.literature.classification
+REACT_APP_SERVER_URL=http://localhost:6060 
