--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ SERVER_PORT=6060
 AUTH0_DOMAIN=dev-frgzkrnejwstqejh.us.auth0.com
 CLIENT_ORIGIN_URL=http://localhost:3000
 AUTH0_AUDIENCE=https://react.literature.classification
+MONGO_DB_CLIENT_INFO=kmelnikov:iE54xHFSZaoKFCGW
