--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "helmet": "^6.0.1",
-    "jwks-rsa": "^3.0.0"
+    "jwks-rsa": "^3.0.0",
+    "mongodb": "^4.12.1"
   }
 }
