--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1270.0",
+    "cli-js": "^0.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "helmet": "^6.0.1",
     "jwks-rsa": "^3.0.0",
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.12.1",
+    "node-fetch": "^2.6.7",
+    "stream": "^0.0.2"
   }
 }
