--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jwks-rsa": "^3.0.0",
     "mongodb": "^4.12.1",
     "node-fetch": "^2.6.7",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "ytdl-core": "^4.11.2"
   }
 }
