mp3 to wav conversion
update API codee. allow mp3 to wav conversion beforehand

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "aws-sdk": "^2.1270.0",
     "cli-js": "^0.0.8",
+    "convert-audio": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^6.0.1",
     "jwks-rsa": "^3.0.0",
     "mongodb": "^4.12.1",
